# Private-Financial-Manager

./: .gitignore  README.md  pfm-angular-service.yaml  pfm-ingress.yaml  pfm-namespace.yaml  pfm-pode.yaml
back-java/: HELP.md  pom.xml
back-java/src/main/resources/: application.properties
back-rust/: Cargo.toml
back-rust/src/: main.rs
back-rust/src/app_stage/: app_stage_model.rs  mod.rs
back-rust/src/routing/: mod.rs  routing.rs
back-rust/src/routing/rest/: root.rs
back-rust/src/routing/security/: keycloak_auth_instance.rs  mod.rs
front-angular/: Dockerfile  Jenkinsfile  README.md  angular.json  package-lock.json  package.json
front-angular/environments/: environment.ts
front-angular/src/: index.html  styles.scss
front-angular/src/app/: Interceptors.ts  app.component.html  app.component.ts  app.config.ts  app.routes.ts  environment.ts
front-angular/src/app/components/account/: account.component.html  account.component.ts
front-angular/src/app/entity/: UserInfo.ts
front-angular/src/app/index/: index.component.html  index.component.ts
front-angular/src/app/service/: AuthGuard.ts
front-angular/src/environments/: environment.dev.ts  environment.prod.ts  environment.ts
front-react/: package.json
front-react/src/: App.tsx  Keycloak.ts  index.scss  main.tsx
front-react/src/elements/navigation/: LinkButton.tsx
front-react/src/pages/: About.tsx  HomePage.tsx
front-react/src/pages/navigation/: Navigation.tsx
front-react/src/services/: TestConnections.tsx
front-react/src/settings/: HttpRequests.tsx
(+38 files in other folders)
