[package]
name = "back-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "uuid", "derive"] }
dotenv = "0.15.0"
axum-keycloak-auth = "0.7.0"

[dev-dependencies]
mockall = "0.13.1"